# comm-game-helmfile

./: .gitignore  .sops.yaml  README.md  helmfile.yaml  test.sh  test.yaml
00-spark/: Dockerfile  README.md  entrypoint.sh
bayard-schema/: dcinside-document.json  tokenizer.json
charts/argo-suppliment/: Chart.yaml
charts/argo-suppliment/templates/: sa.yaml
charts/argo-workflow-assets/: .helmignore  Chart.yaml  values.yaml
charts/argo-workflow-assets/templates/: etl.yaml
charts/argo-workflow-assets/templates/templates/: json-to-parquet.yaml
charts/argo-workflow-assets/templates/unused/: test.yaml
charts/bayard/: Chart.yaml  values.yaml
charts/bayard/templates/: bayard.yaml  config.yaml
charts/crawler-node-rotator/: Chart.yaml  values.yaml
charts/crawler-node-rotator/templates/: rotator.yaml
charts/data-access-secrets/: Chart.yaml
charts/data-access-secrets/templates/: secret.yaml
charts/dcgle-web/: Chart.yaml  values.yaml
charts/dcgle-web/templates/: dcgle-web.yaml
charts/dcinside-crawler/: Chart.yaml  values.yaml
charts/dcinside-crawler/templates/: data-broker-configmap.yaml  data-broker.yaml  live-directory.yaml  worker.yaml
charts/etl/: .helmignore  Chart.yaml  values.yaml
charts/etl/templates/: etl.yaml
charts/etl/templates/onetime/: json-to-orc-backfill.yaml  parlai-backfill.yaml  tsv-conversation-backfill.yaml
charts/etl/templates/unused/: etl.yaml  (+4 more)
charts/grafana-suppliment/: Chart.yaml  values.yaml
charts/grafana-suppliment/templates/: secret.yaml
charts/ingress/: Chart.yaml
charts/jupyter/: Chart.yaml  values.yaml
charts/jupyter/templates/: jupyter.yaml
charts/tantivy-rest/: Chart.yaml  values.yaml
charts/tantivy-rest/templates/: config.yaml  tantivy-rest.yaml
charts/toshi/: Chart.yaml  values.yaml
charts/toshi/templates/: config.yaml  schema.yaml  toshi.yaml
envs/dev/: data-access-secrets.yaml  images.yaml  secrets.yaml
envs/prod/: affinities.yaml  data-access-secrets.yaml  external-ips.yaml  images.yaml  node-selectors.yaml  secrets.yaml
images/00-spark/: Dockerfile  test
images/00-spark/spark-conf/: metrics.properties  spark-defaults.conf  spark-env.sh
images/20-base-notebook/: Dockerfile
images/21-julia-notebook/: Dockerfile
images/25-jupyter-singleuser/: Dockerfile  requirements.txt
images/30-gcloud-kubectl/: Dockerfile
images/31-crawler-node-rotator/: Dockerfile  run.sh
images/dcgle/: .dockerignore  Dockerfile.dcgle-document-writer
images/dcgle-web/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.test  build.rs  start_local_db.sh  start_local_server.sh  test.sh
images/dcgle-web/migrations/: 20210228133758_docs_and_comms.sql
images/dcgle-web/model/: Cargo.toml
images/dcgle-web/model/migrations/: 20210228133758_docs_and_comms.sql
images/dcgle-web/model/src/: error.rs  lib.rs
images/dcgle-web/scripts/: start_local_db.sh
images/dcgle-web/server/: Cargo.toml  build.rs
images/dcgle-web/server/src/: juniper_actix.rs  main.rs  metrics.rs  web.rs
images/dcgle-web/server/svelte-app/: package-lock.json  package.json  rollup.config.js  schema.graphql
images/dcgle-web/server/svelte-app/public/: index.html
images/dcgle-web/server/svelte-app/src/: App.svelte  ModeSwitcher.svelte  Nav.svelte  main.ts
images/dcgle-web/server/svelte-app/src/components/: SearchBar.svelte
images/dcgle-web/server/svelte-app/src/routes/: About.svelte  Blog.svelte  Home.svelte  SearchResult.svelte
images/dcgle-web/src/: error.rs  main.rs  metrics.rs  model.rs  web.rs
images/dcgle-web/svelte-app/: package-lock.json  package.json
images/dcgle-web/svelte-app/public/: index.html
images/dcgle-web/svelte-app/src/: App.svelte  ModeSwitcher.svelte
images/dcgle-web/svelte-app/src/components/: SearchBar.svelte
images/dcgle-web/svelte-app/src/routes/: Home.svelte
images/dcgle/dcgle-document-writer/: Cargo.toml  Dockerfile
images/dcgle/dcgle-document-writer/src/: main.rs  model.rs
images/dcgle/dcgle-web/: .dockerignore  Cargo.toml  Dockerfile  test-db.sh  test.sh
images/dcgle/dcgle-web/dcgle-model/: Cargo.toml
images/dcgle/dcgle-web/dcgle-model/migrations/: 20210228133758_docs_and_comms.sql  20210324115510_auth.sql
images/dcgle/dcgle-web/dcgle-model/src/: error.rs
images/dcgle/dcgle-web/dcgle-server/: Cargo.toml
images/dcgle/dcgle-web/dcgle-server/src/: main.rs  metrics.rs  web.rs
images/dcgle/dcgle-web/dcgle-server/svelte-app/: schema.graphql  tailwind.config.js
images/dcgle/dcgle-web/dcgle-server/svelte-app/src/components/: HomeButton.svelte  SearchBar.svelte
images/dcgle/dcgle-web/dcgle-server/svelte-app/src/routes/: SearchResult.svelte
images/dcgle/dcgle-web/dcgle-server/svelte-app/test/: graphql-mock-server.js
images/dcgle/dcinside-crawler/: Cargo.toml  Dockerfile
images/dcinside-crawler/: Cargo.toml  db  schema.fbs
images/dcinside-crawler/assets/: gallery-problemtic.html  minor_comments.json  minor_gallery.html
images/dcinside-crawler/dcinside-model/: Cargo.toml
images/dcinside-crawler/dcinside-model/src/: lib.rs
images/dcinside-crawler/src/: crawler.rs  error.rs  lib.rs  model.rs  parse.rs
images/jupyter-rust/: Dockerfile
images/nlp/: .gitignore  play.py  play.sh  prepare.sh  requirements.txt  tokenizer.py  train.py  train.sh
images/nlp/util/hangul_normalize/: Cargo.toml  setup.py
images/nlp/util/hangul_normalize/hangul_normalize.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
images/nlp/util/hangul_normalize/src/: lib.rs  main.rs  py.rs
images/postgresql/: Dockerfile
images/toshi/: Dockerfile
scripts/: find-argo-postgres-endpoint.sh  proxy.sh  publish-image-to-gcr.sh  publish-images-to-minikube.sh  run-cst-all.sh  run-cst.sh  update-images-value-file.sh
subhelmfiles/: dcgle-helmfile.yaml  etl-helmfile.yaml  monitor-helmfile.yaml  system-helmfile.yaml
tantivy-schema/: dcinside-document.json  dcinside-document.yaml  tokenizer.json
tests/cst/: aws-cli-ecsong.yml  aws-cli.yml  jupyterhub-singleuser.yml  spark-ecsong.yaml  spark.yml
tests/mysql/: Dockerfile  schema.sql  start.sh  stop.sh
(+24 files in other folders)
