[package]
name = "dcinside_crawler"
version = "0.1.0"
authors = ["Eunchul <eunchul.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
select = "0.6.0-alpha.1"
err-derive = { version = "0.3", default-features = false }
serde_json = "1"
serde = { version = "1",  features = ["derive"] }
serde-aux = "2.1"
#smartstring = { version = "0.2.6", features = ["serde"] }

actix-rt = "1"
actix-web = { version = "3.2", features = ["rustls"] }

chrono = { version = "0.4", features = ["serde"] }
chrono-tz = { version = "0.5" }


actix = "0.10"

# exponential-backoff = "1"

sled = "0.34.6"

log = "0.4"

futures = "0.3"

actix-web-prom = "0.5"
prometheus = "0.11"

pretty_env_logger = "0.4"

rand = "0.8"

nats = { version = "0.9", features = [] }
