[package]
name = "model"
version = "0.1.0"
authors = ["Eunchul Song <eunchulsong9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres", "sqlite", "migrate", "chrono" ] }

juniper = { version = "0.15.3", default-features = false }


[dev-dependencies]
juniper = { version = "0.15.3", features = ["expose-test-schema"] }
