[package]
name = "dcgle-document-writer"
version = "0.1.0"
authors = ["Eunchul Song <eunchulsong9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
#dcinside-document-consumer = { path = "../dcinside-document-consumer" }
#chrono = { version = "0.4", features = ["serde"] }
postgres = { version = "0.19", features = ["with-chrono-0_4"] }

bincode = "1"
nats = { version = "0.9", features = [ "jetstream"] }
dcinside-model = { path = "../dcinside-crawler/dcinside-model" }

[dev-dependencies]
mockito = "0.30"
