[package]
name = "dcinside-model"
version = "0.1.0"
authors = ["Eunchul Song <eunchulsong9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1",  features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
