[package]
name = "dcgle-model"
version = "0.1.0"
authors = ["Eunchul Song <eunchulsong9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }

chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"

sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "postgres", "sqlite", "migrate", "chrono" ] }

async-graphql = { version = "2.6", features = [ "chrono" ] }


[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
serial_test = "0.5"
