[package]
name = "hangul_normalize"
version = "0.1.0"
authors = ["Eunchul <eunchul.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "*"
regex = "*"
lazy_static = "*"
derive_more = "0.99"

[py]
name = "hangul_normalize"
crate-type = ["cdylib"]

[dependencies.cpython]
version = "0.5"
features = ["extension-module"]
